syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message LabelTypeInfo {
	//ID 
    string id=2;
	//类型 
 	string code=3;
	//描述 
    string description=4;
	//备注 
    string remark=5;
}

message QueryLabelTypeRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    // 类型或描述
    // @inject_tag: uri:"code" form:"code"
 	string code=4;
}

message QueryLabelTypeResponse{
    Code code=1;
    string message=2;
    repeated LabelTypeInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllLabelTypeResponse{
    Code code=1;
    string message=2;
    repeated LabelTypeInfo data=3;
}

message GetLabelTypeDetailResponse{
    Code code=1;
    string message=2;
    LabelTypeInfo data=3;
}